Changes for Perl extension Text-FindIndent

	- Handle case where hash keys and values are indented by braces pos + 1
	  (CHORNY)
	- Check if indent level is same on next line and slightly increase probability of
	  current indent type. Should be faster too. (CHORNY)

0.07
	- ~40% faster since 0.05

0.06 
	- ~20-25% faster

0.05 
	- "skip_pod" option to parse() for skipping POD sections.

0.04 
	- Fix the MANIFEST of the distribution

0.03 
	- Rudimentary support for emacs local variables.

0.02 
	- Rudimentary support for vim modelines.

0.01 
	- Starting initial implementation