@@ -4,6 +4,8 @@ Changes for Perl extension Text-FindIndent
 	  (CHORNY)
 	- Check if indent level is same on next line and slightly increase probability of
 	  current indent type. Should be faster too. (CHORNY)
+	- Add option 'first_level_indent_only' to check only indent where previous line
+	  is empty. (CHORNY)
 
 0.07
 	- ~40% faster since 0.05
